Correction des marges et correction du placement du coeur et no-wrap fonctionement

--- a/css/style.css
+++ b/css/style.css
@@ -168,10 +168,12 @@ header img {
   gap: 20px;
   background-color: #f6f6f6;
   border-radius: 25px;
-  width: auto;
+  width: 126%;
   font-weight: 500;
-  padding: 24px 0 24px 0;
+  padding: 24px 0;
   text-align: center;
+  white-space: nowrap;
+  left: -26px;
 }
 @media (min-width: 768px) {
   .proper-functionning li {
@@ -196,7 +198,7 @@ header img {
 
 .fa-mobile-screen-button {
   color: #7E7E7E;
-  margin: 0 27px 0 15px;
+  margin: 0 27px;
 }
 
 .fa-list-ul {
@@ -479,7 +481,7 @@ header img {
   content: "\f004";
   font-size: 22px;
   position: absolute;
-  right: 40px;
+  right: 0;
   bottom: 10px;
   opacity: 1;
   cursor: pointer;
@@ -498,7 +500,7 @@ header img {
   content: "\f004";
   font-size: 22px;
   position: absolute;
-  right: 40px;
+  right: 0;
   bottom: 10px;
   opacity: 1;
   cursor: pointer;
