--- a/sass/structure/_fonctionnement.scss
+++ b/sass/structure/_fonctionnement.scss
@@ -36,10 +36,12 @@ margin-left: 20px;
     gap: 20px;
     background-color: colorgradient.$light-grey-color;
     border-radius: 25px;
-    width: auto;
+    width: 126%;
     font-weight: 500;
-    padding: 24px 0 24px 0;
+    padding: 24px 0;
     text-align: center;
+    white-space: nowrap;
+    left: -26px;
 
     @media  (min-width: breakpoint.$medium-screen) {
       flex-grow: 1;
@@ -70,7 +72,7 @@ margin-left: 20px;
 
 .fa-mobile-screen-button {
   color: colorgradient.$grey-alternate-color;
-  margin: 0 27px 0 15px;
+  margin: 0 27px;
 }
 
 .fa-list-ul {
